@@ -21,6 +21,7 @@ Version 0.4c
  - Ensnare replaced
  - CrushingStrike replaced
  - SetTrap replaced, more powerful
+ - Provoke and Taunt replaced
 
 --------------------------------------------
              PREVIOUS VERSIONS
